...

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
        android:id="@+id/datos_articulo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <LinearLayout
...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imagen_extendida"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:onClick="ampliar" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/lista_circulos"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>

...
                    android:layout_margin="50dp"
                    android:src="@drawable/ic_lupa_negra" />

            </FrameLayout>

            <ImageView
                android:id="@+id/boton_der"
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:layout_gravity="center_vertical"
                android:layout_marginRight="30dp"
                android:onClick="siguienteImagen"
...
                        android:layout_marginRight="26dp"
                        android:elevation="5dp"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/marca"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/foreground_text"
                            android:fontFamily="sans-serif"
                            android:text="marca"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
...
                                android:textColor="@color/foreground_text"/>

                        </ScrollView>


                        <TextView
                            android:id="@+id/precio_articulo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/foreground_text"
                            android:fontFamily="sans-serif"
                            android:text="0€"
...

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/button"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:drawableLeft="@drawable/ic_carrito_peq"
...
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/lista_colores"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="20dp" />


                </LinearLayout>
...
                            android:textAllCaps="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/mas_info_tallas"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/foreground_text"
                            android:fontFamily="sans-serif"
                            android:paddingLeft="20dp"
                            android:text="@string/mas_info"
...
                    </LinearLayout>




                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/lista_tallas"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="20dp" />


                </LinearLayout>
...
