...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/pantalla_carga">

    <LinearLayout
    android:id="@+id/layout_elementos_splash"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|left"
    android:layout_margin="20dp"
    android:orientation="horizontal">

...
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@android:color/white"
                    android:layout_gravity="center">

                    <EditText
                        android:id="@+id/direccionIP_1oct"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:inputType="number"
                        android:background="@color/background_text"
                        android:textColor="@color/foreground_text"
...
                        android:layout_height="wrap_content"
                        android:text="."
                        android:background="@color/background_text"
                        android:textColor="@color/foreground_text"/>

                    <EditText
                        android:id="@+id/direccionIP_2oct"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:inputType="number"
                        android:background="@color/background_text"
                        android:textColor="@color/foreground_text"
...
                        android:layout_height="wrap_content"
                        android:text="."
                        android:background="@color/background_text"
                        android:textColor="@color/foreground_text"/>

                    <EditText
                        android:id="@+id/direccionIP_3oct"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:inputType="number"
                        android:background="@color/background_text"
                        android:textColor="@color/foreground_text"
...
                        android:layout_height="wrap_content"
                        android:text="."
                        android:textColor="@android:color/black"
                        android:background="@android:color/white"/>

                    <EditText
                        android:id="@+id/direccionIP_4oct"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:inputType="number"
                        android:background="@color/background_text"
                        android:textColor="@color/foreground_text"
...



        </LinearLayout>

        <Button
            android:id="@+id/boton_confirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="confirmar"
            android:text="@string/conectar"
            android:textSize="12sp"
            android:backgroundTint="@color/background_button_confirmar"
...
