...
    <!--General-->
    <string name="app_name" translatable="false">EasyShop</string>
    <string name="action_settings">Ajustes</string>

    <string name="confirmar">Confirmar</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="cargando">Cargando…</string>

    <!--Detalle articulo-->
    <string name="tallas">Tallas</string>
    <string name="colores">Otros colores</string>
    <string name="mas_info">+info</string>

    <string name="talla">Talla</string>
    <string name="color">Color</string>
    <string name="moneda">€</string>

    <!--Añadir al carrito-->
    <string name="annadir">Añadir al carrito</string>
    <string name="confirmacion_al_carro">¿Seguro que quiere añadir el artículo al carrito?</string>

    <!--Confirmar compra-->
    <string name="compra">Confirmar compra</string>
    <string name="confirmacion_compra">¿Seguro que quiere confirmar su compra?</string>
    <string name="enviando_ticket">Enviando ticket de compra</string>
...
    <string name="cargar_imagen">Cargando imagen</string>
    <string name="zoom">Puede hacer zoom en la imagen con los dedos</string>

    <!--Conectar con el servidor-->
    <string name="direccion_IP">Dirección IP Servidor</string>
    <string name="error_conexion">Error, no es posible conectar con el servidor</string>
    <string name="conectar">Conectar</string>
    <string name="recargar">Recargar</string>
</resources>

