...
    android:layout_height="match_parent"

    android:background="@color/background_floating_material_light"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/mi_toolbar"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="match_parent"

        android:background="@android:color/black"
        android:orientation="vertical">

...
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        </android.support.v7.widget.Toolbar>
        -->

        <ImageView
            android:id="@+id/imageViewMarca"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"/>

...
            android:layout_height="0dp"
            android:layout_weight="8"/>

    </LinearLayout>

    <GridView
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:columnWidth="120dp"
        android:horizontalSpacing="@dimen/espacio_grilla"
        android:numColumns="2"
...
